<resources>
    <string name="hello">Hello World, SplashActivity!</string>
    <string name="version">Version 1.5.2(Beta)</string>
    <string name="msg_error_with_rt_help">Opps! you cannot send message to system and other user at the same time</string>
    <string name="app_name">YelaTalk</string>
    <string name="constraints_name">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="password">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$*</string>
    <string name="constraints_FN_LN">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="constraints_username2">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 _-@.</string>
    <string name="constraints_email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-@.</string>
    <string name="constraints_question_answer">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 .\'?</string>
    <string name="constraints_email_or_phone">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-@.+*#</string>
    <string name="constraints_email_or_phone_with_space">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-@.+*#</string>
    <string name="constraints_community_create">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 _.</string>
    <string name="constraints_digits">0123456789</string>
     <string name="geeting_audio">Please wait while getting audio...</string>
     <string name="error_geeting_audio">Unable to play please try later!</string>
    <string name="constraints_phone">0123456789+*#</string>
       <string name="retrive_msg">Hang on! \n Fetching your friend list ……</string>
    <string name="Owner">Owner</string>
    <string name="network_error">Oops, RockeTalk is having trouble getting connected. Please try again or try after some time.</string>
    <string name="invalid_user">Sorry, the RockeTalk ID &amp; password combination is incorrect.</string>
    <string name="userid_available">This User Name is available.</string>
    <string name="network_busy">Network busy !</string>
    <string name="error_nocontent">Oops, RockeTalk is having trouble getting connected. Please try again!</string>
    <string name="error_message_play">Sorry, cannot play voice. Speakers may be used by another application or your mobile may be in silent mode!</string>
    <string name="onClickHandleMethodName">onClick</string>
    <string name="verification_error_message">Sorry! The mobile number provided does not match with the SIM card being used. Please enter correct mobile number.</string>
    <string name="verification_error_message_for_reg">Sorry! The mobile number provided does not match with the SIM card being used. Please enter correct mobile number for complete registration.</string>
    <string name="reg_message">Note: To help recover your password, please set your Security Questions in Account Settings</string>
    <string name="verification_text"></string>
<string name="max_attachment_reached_update">Limit exceeded! can not attach more than 10 MB</string>
    <string name="question">Select Question</string>
    <string name="reg_search"><h1><b>Your Friends on RockeTalk</b></h1>\n\nSome of your friends may already be on RockeTalk.</string>
    <string name="create_community_terms"><a href="http://google.co.in">Terms and conditions</a></string>
    <string name="about_rocketalk">About YelaTalk</string>
    <string name="block_user">Blocked list</string>
    <string name="block"> Block </string>
    <string name="unblock"> Unblock </string>
    <string name="when_text_is_not_enough">When text is not enough!</string>
    <string name="copyright_message">Copyright 2013, RockeTalk Inc.</string>
    <string name="all_right_reserved">All rights reserved.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_only">Contact</string>
    <string name="home_icon_text">Home Icon Image</string>
    <string name="playing">Playing</string>
    <string name="sound_play_icon">Sound Play Icon</string>
    <string name="stop"> Stop </string>
    <string name="pause">Pause</string>
    <string name="update_profile">Update Profile</string>
    <string name="skip"> Skip </string>
    <string name="name">Name</string>
    <string name="name_hint">Please enter your name</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Not Specified</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="topbuttonsixze">28px</string>
    <string name="tocheck">support@rocketalk.com</string>
    <string name="verification_assistance_message">\nFor further assistance please call: <a href="tel://+919765266777">+919765266777</a>(*call charges apply)</string>
    <string name="support_email_text">Email <a href="mailto://support@rocketalk.com">support@rocketalk.com</a></string>
    <string name="declineAlert">Friend request declined.</string>
    <string name="igonoreAlert">This person will not be able to send you a friend request.</string>
    <string name="acceptAlert">Friend added!</string>
    <string name="ReportAlert">Thanks for reporting.</string>
    <string name="send_message">Start</string>
    <string name="invite">Invite</string>
    <string name="update_status">Update Status</string>
    <string name="wht_on_ur_mind">What\'s on your mind :)</string>
    <string name="posts">Post</string>
    <string name="postss">Posts</string>
    <string name="invite_your_contacts">Invite your contact to YelaTalk</string>
    <string name="multiple_select">Select</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="options">Start</string>
    <string name="Accept">Accept</string>
    <string name="Ignore">Ignore</string>
    <string name="start">Start</string>
    <string name="offlinemsg">s</string>
    <string name="request">Request!</string>
    <string name="upload">Upload Photo</string>
    <string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="can_not_attached_video">You can either attach video or image!</string>
    <string name="can_not_attached_image">You can either attach video or image!</string>
    <string name="facebook_on">‘On’ allows you to automatically share your Gallery posts with your friends on Facebook.</string>
    <string name="facebook_off">By selecting ‘Off’, your posts will not get posted to Facebook automatically. You will need to share individual posts by selecting from the share options.</string>
    <string name="facebook_desc">Rocketalk is the most popular mobile social app that allows life capture using voice, photos and video and follow and get followed.</string>
    <string name="videoAttached_tooltips">You can attach video of up to 10MB, about 20-25 seconds. For longer videos, please use a lower resolution setting.</string>
    <string name="test_html"><html>here nagendra Hello, click her to see here nagendra Hello, click her to see <a href="http://test.com">your gf</a> here </html></string>
    <string name="refresh_pull_label">Pull down to refresh...</string>
    <string name="refresh_release_label">Release to refresh...</string>
    <string name="refresh_refreshing_label">Refreshing...</string>
    <string name="refresh_tap_label">Tap to refresh...</string>
    <string name="loading_interface">Loading activity updates...</string>
    <string name="loading_activity">Loading activity...</string>
    <string name="loading_discovery">Loading discovery...</string>
    <string name="questionmark">\?!</string>
    <string name="explenation">Sorry, but i could not find a camera on your device.</string>
    <string name="nosdcard">There is no SD card</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="facebook_permission_error">Your media could not be posted to Facebook since you picked ‘Allow None’ in your options.</string>
    <string name="add_conversation_subject">Enter conversation subject</string>
    <string name="update">Update</string>
    <string name="get_voice"></string>
    <string name="reciving_voice">Downloading...</string>
    <string name="wait_loading">Wait loading...</string>
     <string name="wait_feed">We are posting your content. Please wait…</string>
    <string name="refreshing_list">Refreshing list...</string>
    <string name="load_prevoius_message">Load previous messages</string>
    <string name="checking_conversation">Loading conversations</string>
    <string name="message_sending">Sending...</string>
    <string name="message_retry"> Retry  </string>
    <string name="message_sent"> Sent  </string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">RockeTalk Friend List</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Tap to Refresh Device</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="get_video"> Download </string>
    <string name="reciving_video">Downloading...</string>
    <string name="no_conversation_started_yet"> Tap to refresh</string>
    <string name="download_rt">Hi,\r\n\r\nI am using RockeTalk to meet like minded people &amp; share media from my mobile - I think you will like it\r\n\r\nDownload for free on http://m.rocketalk.com or from your app store.</string>
    <string name="mail_subject">Capture life and Share with RockeTalk</string>
    <string name="user_name">Username</string>
    <string name="mobile_email">Email, Mobile number or Username</string>
    <string name="mobile_selection">There are more than one mobile number for this contact. Select one</string>
    <string name="email_selection">There are more than one email id. Select the one you want to send the invite to</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="compleate_profile">Complete your profile to let others know you better</string>
    <string name="full_name">Your full name</string>
    <string name="genter_you_belong">Gender you belong to</string>
    <string name="your_email">Your email id for update</string>
    <string name="get_from_fb">       Get from Facebook</string>
    <string name="select_picture">Select picture</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="or">    or     </string>
    <string name="facbook_line">Why fill in, get your Facebook profile</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="recording_audio">Recording audio</string>
    <string name="secs_left">Secs left</string>
    <string name="gallery">Gallery</string>
    <string name="your_email_will_never_be_displayed_publicly">(Your email id will never be publicly displayed)</string>
    <string name="change_pic">Change Picture</string>
       <string name="create_prof_intrest_tag">Edit your interests for suggested channels</string>
</resources>