<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	 android:background="@drawable/white_background"
	android:gravity="center_horizontal">

    <com.kainat.app.android.facebook.LoginButton
        android:id="@+id/fblogin"
        android:src="@drawable/fblogin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="30dp"
        />

	<TextView android:id="@+id/fbtxt" 
        android:text="@string/hello"
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		/>
		
	<Button android:id="@+id/fbuploadButton"
        android:text="@string/upload"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        />
        
	<Button android:id="@+id/fbrequestButton"
        android:text="@string/request"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        />


	<Button android:id="@+id/fbpostButton" 
        android:text="@string/post"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
		/>
		
    <Button android:id="@+id/fbdeletePostButton" 
        android:text="@string/delete"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        />



</LinearLayout>