<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/list_background" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/app_blue_txt_color"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/x_arrows_left"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView1"
            style="@style/HeaderFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:layout_centerHorizontal="true"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/your_phone_number"
            android:visibility="gone" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/x_arrows_right"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="normal"
            android:visibility="visible" />
    </RelativeLayout>

            <TextView
                android:id="@+id/txt_header_profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/compleate_profile"
                android:textColor="@color/heading_text"
                android:textSize="17sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:id="@+id/image_layout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/txt_header_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:orientation="vertical" >

                <com.kainat.app.android.uicontrol.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/male_icon" />

                <TextView
                    android:id="@+id/change_pic"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/header"
                    android:layout_centerHorizontal="true"
                    android:background="@color/transparent_new"
                    android:gravity="center"
                    android:text="@string/change_pic"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/profile_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_layout"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableBottom="@drawable/create_channel_line"
                    android:drawablePadding="5dp"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/heading"
                    android:textColorHint="@color/sub_heading"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:drawableBottom="@drawable/create_channel_line"
                    android:drawablePadding="5dp"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/genter_you_belong"
                    android:textColor="@color/heading"
                    android:textColorHint="@color/sub_heading"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:drawableBottom="@drawable/create_channel_line"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/heading"
                    android:textColorHint="@color/sub_heading"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:inputType="textCapSentences"
                    android:text="@string/your_email_will_never_be_displayed_publicly"
                    android:textColor="@color/tips_color"
                    android:paddingLeft="15dp"
                    android:textSize="10sp" >
                </TextView>

                <TextView
                    android:id="@+id/or_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:inputType="textCapSentences"
                    android:text="@string/or"
                    android:textColor="@color/heading"
                    android:textSize="16dp" >
                </TextView>

                <TextView
                    android:id="@+id/or_profile_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:inputType="textCapSentences"
                    android:text="@string/facbook_line"
                    android:textColor="@color/tips_color"
                    android:textSize="10sp" >
                </TextView>

                <TextView
                    android:id="@+login/login_fb"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/facebook_new"
                    android:gravity="center"
                    android:inputType="textCapSentences"
                    android:text="@string/get_from_fb"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:visibility="visible" >
                </TextView>

                <Button
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/done"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_interests"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_below="@+id/profile_details"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" >

                    <TextView
                        android:id="@+id/txt_all_channels"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:gravity="left"
                        android:text="@string/create_prof_intrest_tag"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/arrow_1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="right"
                        android:src="@drawable/ic_list_more" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/divider_iv"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/layout02"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:alpha=".80"
                    android:background="#919191" />

                <HorizontalScrollView
                    android:id="@+id/mainScrollView_txt_all_channels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <LinearLayout
                        android:id="@+id/mainlayout_outer_txt_all_channels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isScrollContainer="true"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </HorizontalScrollView>

                <com.kainat.app.android.HorizontalListView
                    android:id="@+id/listview_interests"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#ddd" />
            </LinearLayout>

            <Spinner
                android:id="@+id/image_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:entries="@array/image_choose"
                android:gravity="center"
                android:spinnerMode="dialog"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/gender_spineer"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:entries="@array/gender"
                android:gravity="center"
                android:spinnerMode="dialog"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/terms_condition_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:autoLink="email"
                android:clickable="true"
                android:onClick="@string/onClickHandleMethodName"
                android:text="@string/terms_of_service"
                android:textColor="@color/kainat_text_color"
                android:textSize="15dip"
                android:visibility="gone" />
        

</RelativeLayout>